Add bower and development server.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/anduinmooney/js_calculator#readme",
   "devDependencies": {
+    "bower-files": "^4.0.0",
+    "browser-sync": "^2.23.6",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
